--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx webpack-dev-server --mode=development",
-    "lint": "npx tsc"
+    "lint": "npx tslint ./src/**/*.ts",
+    "lint-fix": "npx tslint ./src/**/*.ts --fix"
   },
   "repository": {
     "type": "git",
@@ -37,6 +38,7 @@
   "dependencies": {
     "awesome-typescript-loader": "^5.2.0",
     "concurrently": "^3.6.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.0.1",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0",
