--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "./dist",
     "allowJs": true,
     "target": "ES2017",
-    "strict": true
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true
   },
   "include": ["./src/**/*"]
 }
